--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.3'
-//	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
+	//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.kh'
@@ -17,10 +17,8 @@ repositories {
 }
 
 dependencies {
-
 	// Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-
 
 	compileOnly 'org.projectlombok:lombok:1.18.28'
 	annotationProcessor 'org.projectlombok:lombok:1.18.28'
@@ -43,7 +41,6 @@ dependencies {
 	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
 
 
-
 }
 
 tasks.named('test') {
@@ -52,22 +49,25 @@ tasks.named('test') {
 
 // QueryDSL 관련 여기부터 추가
 //def generated = 'src/main/generated'
-//
+
+//clean {
+//	delete file (generated)
+//}
+
 //querydsl {
 //	jpa = true
 //	querydslSourcesDir = generated
 //}
-//
 //sourceSets {
 //	main.java.srcDir generated
 //}
-//
-//tasks.compileQuerydsl.dependsOn(clean);
-//
+
+// tasks.compileQuerydsl.dependsOn(clean);
+
 //compileQuerydsl{
 //	options.annotationProcessorPath = configurations.querydsl
 //}
-//
+
 //configurations {
 //	compileOnly {
 //		extendsFrom annotationProcessor
