--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.3'
-	//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+//	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.kh'
@@ -49,12 +49,13 @@ tasks.named('test') {
 
 // QueryDSL 관련 여기부터 추가
 //def generated = 'src/main/generated'
-
+//
 //clean {
 //	delete file (generated)
 //}
 
 //querydsl {
+//library = "com.querydsl:querydsl-apt:5.0.0" // 사용할 AnnotationProcessor 정의
 //	jpa = true
 //	querydslSourcesDir = generated
 //}
@@ -62,12 +63,17 @@ tasks.named('test') {
 //	main.java.srcDir generated
 //}
 
-// tasks.compileQuerydsl.dependsOn(clean);
-
+// complieQuerydsl Task에 clean 동작 추가
+//tasks.compileQuerydsl.dependsOn(clean);
+//
 //compileQuerydsl{
 //	options.annotationProcessorPath = configurations.querydsl
 //}
-
+//
+//configurations {
+//	querydsl.extendsFrom compileClasspath
+//}
+//
 //configurations {
 //	compileOnly {
 //		extendsFrom annotationProcessor
