--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-
-# ???? ??
-#server.port= ????
-
 server.servlet.encoding.force=true
 server.servlet.encoding.force-response=true
 
@@ -11,18 +7,9 @@ spring.datasource.username=youtube
 spring.datasource.password=youtube
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# 파일 업로드를 위한 설정
-# 파일 업로드 가능 여부
 spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=C:\\upload
+spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=300MB
 
-# 업로드된 파일의 임시 저장 경로
-spring.servlet.multipart.location=D:\\upload
-
-# 한 번에 최대 업로드 가능 용량
-spring.servlet.multipart.max-request-size=50MB
-
-# 파일 하나의 최대 크기
-spring.servlet.multipart.max-file-size=20MB
-
-# 업로드된 파일 저장
-youtube.upload.path=D:\\youtube-frontend\\public\\upload
+youtube.upload.path=C:\\devtest3333\\youtube-frontend\\public\\upload
